--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link REL="STYLESHEET" HREF="STYLE.CSS">
+   <link REL="STYLESHEET" HREF="style.css">
    <link REL="shortcur icon" HREF="IMAG/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -81,4 +81,5 @@
 <script SRC="curriculo.js"></script>
 
 </body> 
+
 </html>
